Fully implement events
